--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
             <h2>Endereço:</h2>
             <pre>
-            Jequié
+            Jequié - Bahia
             Campo do América
             CEP: 45200000
             </pre>
