--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                             <li>2016...</li>
                         </ul>
                 </ul>
+        <img src="foto1.png" width="300" height="300" alt="Carro 1">
+            <br>
+        <img src="foto2.jpeg" width="300" height="500" alt="Carro 2">
         
     </body>
 </html>
